--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("../img/texture-paper.png");
+    background: url("../img/texture-paper.avif");
     background-size: 280px 280px;
 }
 
@@ -812,7 +812,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("../img/dots-bg.png");
+    background-image: url("../img/dots-bg.avif");
 }
 
 .bg-lines-h2-bg {
@@ -820,11 +820,11 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("../img/agence-la-panthere.jpg");
+    background-image: url("../img/agence-la-panthere.avif");
 }
 
 .bg-presentation {
-    background-image: url("../img/image-de-presentation.bmp");
+    background-image: url("../img/image-de-presentation.avif");
 }
 
 @media (max-width: 1024px) {
