--- a/css/style.css
+++ b/css/style.css
@@ -651,7 +651,10 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000!important;
+}
+blockquote{
+    color: #773415;
 }
 
 .container {
