--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -156,7 +156,7 @@ button,
 html input[type=button],
 input[type=reset],
 input[type=submit] {
-    -webkit-appearance: button;
+    appearance: button;
     cursor: pointer
 }
 
@@ -192,7 +192,7 @@ input[type=search] {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    -webkit-appearance: textfield
+    appearance: textfield
 }
 
 input[type=search]::-webkit-search-cancel-button,
@@ -3096,7 +3096,7 @@ input[type=search] {
 input[type=checkbox],
 input[type=radio] {
     margin: 4px 0 0;
-    margin-top: 1px\9;
+    margin-top: 1px;
     line-height: normal
 }
 
@@ -3186,7 +3186,7 @@ textarea.form-control {
 }
 
 input[type=search] {
-    -webkit-appearance: none
+    appearance: none
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -3244,7 +3244,7 @@ input[type=search] {
 .radio input[type=radio],
 .radio-inline input[type=radio] {
     position: absolute;
-    margin-top: 4px\9;
+    margin-top: 4px;
     margin-left: -20px
 }
 
@@ -4280,7 +4280,7 @@ tbody.collapse.in {
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
-    border-top: 4px solid\9;
+    border-top: 4px solid black;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent
 }
@@ -4367,7 +4367,7 @@ tbody.collapse.in {
     cursor: not-allowed;
     background-color: transparent;
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+    /* filter: progid:DXImageTransform.Microsoft.gradient(enabled=false) */
 }
 
 .open>.dropdown-menu {
@@ -4416,7 +4416,7 @@ tbody.collapse.in {
     content: "";
     border-top: 0;
     border-bottom: 4px dashed;
-    border-bottom: 4px solid\9
+    border-bottom: 4px solid
 }
 
 .dropup .dropdown-menu,
@@ -5118,7 +5118,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     max-height: 340px
 }
 
-@media (max-device-width:480px) and (orientation:landscape) {
+@media (max-width:480px) and (orientation:landscape) {
     .navbar-fixed-bottom .navbar-collapse,
     .navbar-fixed-top .navbar-collapse {
         max-height: 200px
@@ -6145,7 +6145,7 @@ a.thumbnail:hover {
     color: #843534
 }
 
-@-webkit-keyframes progress-bar-stripes {
+@keyframes progress-bar-stripes {
     from {
         background-position: 40px 0
     }
@@ -6154,7 +6154,7 @@ a.thumbnail:hover {
     }
 }
 
-@-o-keyframes progress-bar-stripes {
+@keyframes progress-bar-stripes {
     from {
         background-position: 40px 0
     }
@@ -6265,9 +6265,8 @@ a.thumbnail:hover {
 .media,
 .media-body {
     overflow: hidden;
-    zoom: 1
+    transform: scale(1) 
 }
-
 .media-body {
     width: 10000px
 }
@@ -7046,7 +7045,7 @@ button.list-group-item-danger.active:hover {
 }
 
 button.close {
-    -webkit-appearance: none;
+    appearance: none;
     padding: 0;
     cursor: pointer;
     background: 0 0;
@@ -7672,7 +7671,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
@@ -7824,9 +7823,9 @@ button.close {
     position: fixed
 }
 
-@-ms-viewport {
+/* @-ms-viewport {
     width: device-width
-}
+} */
 
 .visible-lg,
 .visible-md,
